NEWS -- an overview of user-visible changes with each release

----------------------------------------------------------------------
utsushi-0.47.0                                            (2018-09-03)
----------------------------------------------------------------------
 * adds driver support for new models
 
----------------------------------------------------------------------
utsushi-0.46.0                                            (2018-08-07)
----------------------------------------------------------------------
 * adds driver support for new models
 
----------------------------------------------------------------------
utsushi-0.45.0                                            (2018-07-26)
----------------------------------------------------------------------
 * adds driver support for new models
 
----------------------------------------------------------------------
utsushi-0.44.0                                            (2018-07-25)
----------------------------------------------------------------------
 * adds driver support for new models
 
----------------------------------------------------------------------
utsushi-0.43.0                                            (2018-07-06)
----------------------------------------------------------------------
 * adds driver support for new models
 
----------------------------------------------------------------------
utsushi-0.42.2                                            (2018-06-22)
----------------------------------------------------------------------
 * fixes build for fedora 28 bug
 
----------------------------------------------------------------------
utsushi-0.42.0                                            (2018-06-06)
----------------------------------------------------------------------
 * adds driver support for new models
 
----------------------------------------------------------------------
utsushi-0.41.0                                            (2018-06-04)