@@ -40,14 +40,18 @@ ATTRS{idProduct}=="015c", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="015d", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="015e", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="015f", ENV{utsushi_driver}="esci"
+ATTRS{idProduct}=="0160", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="0162", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="0163", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="0164", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="0165", ENV{utsushi_driver}="esci"
+ATTRS{idProduct}=="0166", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="0167", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="0168", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="0169", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="016b", ENV{utsushi_driver}="esci"
+ATTRS{idProduct}=="016c", ENV{utsushi_driver}="esci"
+ATTRS{idProduct}=="016e", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="0176", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="0177", ENV{utsushi_driver}="esci"
 
