@@ -1,6 +1,11 @@
 NEWS -- an overview of user-visible changes with each release
 
 ----------------------------------------------------------------------
+utsushi-0.48.0                                            (2018-09-19)
+----------------------------------------------------------------------
+ * adds driver support for new models
+ 
+----------------------------------------------------------------------
 utsushi-0.47.0                                            (2018-09-03)
 ----------------------------------------------------------------------
  * adds driver support for new models
